@@ -84,12 +84,6 @@ Vue.component('lms-ui-settings', {
     </v-list-tile>
     <v-divider></v-divider>
 
-    <v-list-tile>
-     <v-select :items="ndShortcutValues" :label="i18n('Shortcuts in main menu')" v-model="ndShortcuts" item-text="label" item-value="key"></v-select>
-    </v-list-tile>
-    <v-list-tile-sub-title style="padding-bottom:16px">{{i18n('Show shortcuts to pinned home screen items in main menu. (NOTE: Radio streams and random mixes are excluded.)')}}</v-list-tile-sub-title>
-    <v-divider></v-divider>
-
     <v-list-tile v-if="mediaControlsSupported">
      <v-list-tile-content @click="mediaControls = !mediaControls" class="switch-label">
       <v-list-tile-title>{{IS_MOBILE ? i18n('Lock screen and notifications') : i18n('Media keys and notifications')}}</v-list-tile-title>
@@ -381,6 +375,31 @@ Vue.component('lms-ui-settings', {
     </v-list-tile>
 
     <div class="dialog-padding"></div>
+    <v-header class="dialog-section-header">{{i18n('Main menu')}}</v-header>
+    <v-list-tile>
+     <v-select :items="ndShortcutValues" :label="i18n('Shortcuts in main menu')" v-model="ndShortcuts" item-text="label" item-value="key"></v-select>
+    </v-list-tile>
+    <v-list-tile-sub-title style="padding-bottom:16px">{{i18n('Show shortcuts to pinned home screen items in main menu. (NOTE: Radio streams and random mixes are excluded.)')}}</v-list-tile-sub-title>
+    <v-divider></v-divider>
+
+    <v-list-tile>
+     <v-list-tile-content @click="ndSettingsIcons = !ndSettingsIcons" class="switch-label">
+      <v-list-tile-title>{{i18n('Use icons for settings')}}</v-list-tile-title>
+      <v-list-tile-sub-title>{{i18n('Use a row of icons, and not a list of text, for settings entries.')}}</v-list-tile-sub-title>
+     </v-list-tile-content>
+     <v-list-tile-action><m3-switch v-model="ndSettingsIcons"></m3-switch></v-list-tile-action>
+    </v-list-tile>
+    <v-divider></v-divider>
+
+    <v-list-tile>
+     <v-list-tile-content @click="ndSettingsVisible = !ndSettingsVisible" class="switch-label">
+      <v-list-tile-title>{{i18n('Settings (and shortcuts) always visible')}}</v-list-tile-title>
+      <v-list-tile-sub-title>{{i18n('Only scroll player list, keep settings (and shortcuts) visible at bottom.')}}</v-list-tile-sub-title>
+     </v-list-tile-content>
+     <v-list-tile-action><m3-switch v-model="ndSettingsVisible"></m3-switch></v-list-tile-action>
+    </v-list-tile>
+
+    <div class="dialog-padding"></div>
     <div class="dialog-bottom-pad"></div>
    </v-list>
   </v-card-text>
@@ -473,7 +492,9 @@ Vue.component('lms-ui-settings', {
             showMoveDialogs: false,
             autoCloseQueue: false,
             ndShortcuts: 0,
-            ndShortcutValues: []
+            ndShortcutValues: [],
+            ndSettingsIcons: false,
+            ndSettingsVisible: false
         }
     },
     computed: {
@@ -646,6 +667,8 @@ Vue.component('lms-ui-settings', {
             this.moveDialogs = this.$store.state.moveDialogs;
             this.autoCloseQueue = this.$store.state.autoCloseQueue;
             this.ndShortcuts = this.$store.state.ndShortcuts;
+            this.ndSettingsIcons = this.$store.state.ndSettingsIcons;
+            this.ndSettingsVisible = this.$store.state.ndSettingsVisible;
             this.showItems=[{id: TOP_MYMUSIC_ID, name:i18n("My Music"), show:!this.hidden.has(TOP_MYMUSIC_ID)},
                             {id: TOP_RADIO_ID, name:i18n("Radio"), show:!this.hidden.has(TOP_RADIO_ID)},
                             {id: TOP_FAVORITES_ID, name:i18n("Favorites"), show:!this.hidden.has(TOP_FAVORITES_ID)},
@@ -755,7 +778,9 @@ Vue.component('lms-ui-settings', {
                       mediaControls:this.mediaControls,
                       moveDialogs:this.moveDialogs,
                       autoCloseQueue:this.autoCloseQueue,
-                      ndShortcuts:this.ndShortcuts
+                      ndShortcuts:this.ndShortcuts,
+                      ndSettingsIcons:this.ndSettingsIcons,
+                      ndSettingsVisible:this.ndSettingsVisible
                   };
             if (withSorts) {
                 for (var key in window.localStorage) {
